# interview-prep-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  README.md
backend/: pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/agents/: factory.py  graph.py  middleware.py
backend/src/agents/prompts/: classify.py  job_search.py  system.py
backend/src/agents/subagents/: company_research.py  job_search.py
backend/src/agents/tools/: common_tools.py  company_research_tools.py  job_search_tools.py
backend/src/api/: auth.py
backend/src/api/v1/: chat.py  companies.py  conversations.py  jobs.py
backend/src/models/: schemas.py
backend/src/services/: intent_parser.py  pipeline.py  price_cache.py  response_composer.py  usage_tracker.py
backend/tests/: conftest.py  test_intent_parser.py  test_pipeline.py  test_tools_job_search.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/features/: ChatPanel.tsx  (+4 more)
frontend/src/hooks/: useAgentStream.ts
frontend/src/lib/: api.ts  sse-parser.ts
frontend/src/types/: index.ts
migrations/: 001_initial_schema.sql  002_job_postings.sql  003_company_profiles.sql  004_interview_prep.sql  005_clerk_auth.sql
src/backend/: pyproject.toml
src/backend/src/: config.py  database.py  main.py
src/backend/tests/: conftest.py  test_pipeline.py  test_tools_company_research.py  test_tools_job_search.py
src/frontend/: package-lock.json  package.json
(+28 files in other folders)
